testdata/golden/sema/valid/import_objects.fmt
// scenario: import public objects from other modules
import ./inner/_stub_const_fn_type_contract::{INNER_PUBLIC_CONST, inner_publicFunc, InnerPublicContract, InnerPublicType};
import ./_stub_const_fn_type_contract::{PUBLIC_CONST, publicFunc, PublicContract, PublicType};

fn main() {
    const public_const = INNER_PUBLIC_CONST;
    const public_const_2 = PUBLIC_CONST;
    let _ = publicFunc();
    let _ = inner_publicFunc();
    let _ = PublicType { value = 1 };
    let _ = InnerPublicType { value = 1 };
}

fn foo<T>(t: T) {
    let _ = t.method();
}

fn bar<T>(t: T) {
    let _ = t.method();
}
